add swagger doc to auth controller
